- Handle out-of-disk in the file writers (a bit, see http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=67259)
- Added Xcode project files to build libmpg123 on Mac OS and iOS
- 32 bit output for sndio output (patch by Brad Smith).
- Remote control interface knows LOADLIST command now.

1.13.7
---
- Fix endless loop in module loader when starting mpg123 in a directory that does not exist.

1.13.6
---
- Fix output of one random character in -vvv mode for ID3v2.2 frames (no buffer overflow, move along, folks;-).

1.13.5
---
- Fix reading of ReplayGain values from Lame tag (nobody seen this before?!)
  (both actual values and the distinction between audiophile / radio).
- Accept application/octet-stream as input from HTTP.
- Update man page with encodings.
- Build fixes.

1.13.4
---
- Fix bogus error on resync with big offsets (hits systems that have bigger off_t than int), bug 3393801.
- Fix windows binary package build script again with plugdir.

1.13.3
---
- Fix an endless loop on bad headers, bug 3267863.
- Prevent compiler warnings about unused variables with gcc 4.6 .
- Fix return value handling of getaddrinfo(), bug 3288333.
- Make decwin size computation work for OPT_ARM and sizeof(long) != 4 (bug 3288360).

1.13.2
---
- Updated .NET wrapper (MPG123_SKIP_ID3V2, encsize and mpg123_strlen functions) by Malcolm Boczek.
- Fix crash when calling mpg123_decoder() before opening a track -- a rare use case since one can choose a decoder with mpg123_new() already.
- Fix format change detection for certain (artificial) concatenated streams (p.ex. MPEG 1 frames following MPEG 2 frames).
- Prevent the nasty of bug 3154889: No change of pitch without a current audio format. No proper solution, but more like earlier behaviour.
- Fix some compiler warnings.
- Fix a memory leak in the module loader, also some in the examples, for being pedantic.
- More use of AC_LANG_SOURCE to silence autoconf.

1.13.1
---